--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blazer</title>
+    <title>Unblocked V2</title>
     <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.0/css/all.css">
 </head>
 <body>
     <nav>
         <img src="images/logo.png" alt="logo">
-        <h1>BLAZER</h1>
+        <h1>Unblocked V2</h1>
     </nav>
 
     <div class="featured">
@@ -84,6 +84,7 @@
         <a href="games/motox3m2/"><img src="images/motox3m2.jpg" alt="moto x3m2"></a>
     </div>
     </div>
+    <h2>Up To Date</h2>
 </body>
 </html>
 
