--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <img src="images/logo.png" alt="logo">
+        <img src="images/icon.png" alt="logo">
         <h1>Unblocked V2</h1>
     </nav>
 
