--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <a href="games/slope/"><img src="images/slope.jpg" alt="slope"></a>
         <a href="games/motox3m2/"><img src="images/motox3m2.jpg" alt="moto x3m2"></a>
         <a href="games/1v1lol/"><img src="images/1v1icon.png" alt="1v1 lol"></a>
+        <a href="games/a-dance-of-fire-and-ice/"><img src="images/1v1icon.png" alt="1v1 lol"></a>
     </div>
     </div>
     <h2>Up To Date</h2>
