Huge Game Additions

--- a/index.html
+++ b/index.html
@@ -84,10 +84,19 @@
         <a href="games/motox3m2/"><img src="images/motox3m2.jpg" alt="moto x3m2"></a>
         <a href="games/1v1lol/"><img src="images/1v1icon.png" alt="1v1 lol"></a>
         <a href="games/a-dance-of-fire-and-ice/"><img src="images/adofai.png" alt="a dance of fire and ice"></a>
+        <a href="games/amongus/"><img src="images/auicon.png" alt="among us"></a>
+        <a href="games/backrooms/"><img src="images/backrooms.png" alt="backrooms"></a>
+        <a href="games/badicecream2/"><img src="images/badice2.png" alt="bad ice cream 2"></a>
+        <a href="games/baldisbasics/"><img src="images/baldi.png" alt="baldis basics"></a>
+        <a href="games/basketballstars/assets/"><img src="images/basketballstars.png" alt="basketball stars"></a>
+        <a href="games/basketbrosio/"><img src="images/basketbros" alt="basketbros.io"></a>
+        <a href="games/2048/"><img src="images/2048.png" alt="2048"></a>
     </div>
     </div>
     <h2>Up To Date</h2>
     <h3>v2.0.0</h3>
+    <h4>https://www.youtube.com/</h4>
+    <h5>https://www.roblox.com/</h5>
 </body>
 </html>
 
