--- a/index.html
+++ b/index.html
@@ -91,12 +91,11 @@
         <a href="games/basketballstars/assets/"><img src="images/basketballstars.png" alt="basketball stars"></a>
         <a href="games/basketbrosio/"><img src="images/basketbros" alt="basketbros.io"></a>
         <a href="games/2048/"><img src="images/2048.png" alt="2048"></a>
+        <a href="games/bitlife/"><img src="images/bitlife.png" alt="bitlife"></a>
     </div>
     </div>
     <h2>Up To Date</h2>
     <h3>v2.0.0</h3>
-    <h4>https://www.youtube.com/</h4>
-    <h5>https://www.roblox.com/</h5>
 </body>
 </html>
 
