--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
         <a href="games/bob-the-robber-2/"><img src="images/bob-the-robber-2.png" alt="bob the robber 2"></a>
         <a href="games/vex7/"><img src="images/vex7.jpeg" alt="vex 7"></a>
         <a href="games/vex6/"><img src="images/vex6.jpeg" alt="vex 6"></a>
-        <a href="games/"><img src="images/mc.png" alt="minecraft"></a>
         <a href="games/moto-x3m/"><img src="images/moto-x3m.jpg" alt="moto x3m"></a>
         <a href="games/retro-bowl/"><img src="images/retro-bowl.jpg" alt="retrobowl"></a>
         <a href="games/drive-mad/"><img src="images/drive-mad.jpg" alt="drive mad"></a>
@@ -92,6 +91,15 @@
         <a href="games/basketbrosio/"><img src="images/basketbros" alt="basketbros.io"></a>
         <a href="games/2048/"><img src="images/2048.png" alt="2048"></a>
         <a href="games/bitlife/"><img src="images/bitlife.png" alt="bitlife"></a>
+        <a href="games/worldshardestgame/"><img src="images/worldshardestgame.png" alt="worlds hardest game"></a>
+        <a href="games/worldshardestgame2/"><img src="images/worldshardestgame2.png" alt="worlds hardest game 2"></a>
+        <a href="games/slope2/"><img src="images/slope21.png" alt="slope 2"></a>
+        <a href="games/sm64/"><img src="images/sm64.png" alt="super mario 64"></a>
+        <a href="games/stickmanhook/"><img src="images/stickmanhook.png" alt="stickman hook"></a>
+        <a href="games/minecraft-18/"><img src="images/minecraft.png" alt="minecraft"></a>
+        <a href="games/drift-boss/"><img src="images/driftboss.png" alt="drift boss"></a>
+        <a href="games/core-ball/"><img src="images/coreball.png" alt="core ball"></a>
+        <a href="games/wordle/"><img src="images/wordleicon.png" alt="wordle"></a>
     </div>
     </div>
     <h2>Up To Date</h2>
