--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
         <a href="games/backrooms/"><img src="images/backrooms.png" alt="backrooms"></a>
         <a href="games/badicecream2/"><img src="images/badice2.png" alt="bad ice cream 2"></a>
         <a href="games/baldisbasics/"><img src="images/baldi.png" alt="baldis basics"></a>
-        <a href="games/basketballstars/assets/"><img src="images/basketballstars.png" alt="basketball stars"></a>
-        <a href="games/basketbrosio/"><img src="images/basketbros" alt="basketbros.io"></a>
+        <a href="games/basketballstars/"><img src="images/basketballstars.png" alt="basketball stars"></a>
+        <a href="games/basketbrosio/"><img src="images/basketbros.png" alt="basketbros.io"></a>
         <a href="games/2048/"><img src="images/2048.png" alt="2048"></a>
         <a href="games/bitlife/"><img src="images/bitlife.png" alt="bitlife"></a>
-        <a href="games/worldshardestgame/"><img src="images/worldshardestgame.png" alt="worlds hardest game"></a>
+        <a href="games/worldshardestgame/"><img src="images/worldhardestgame.png" alt="worlds hardest game"></a>
         <a href="games/worldshardestgame2/"><img src="images/worldshardestgame2.png" alt="worlds hardest game 2"></a>
         <a href="games/slope2/"><img src="images/slope21.png" alt="slope 2"></a>
         <a href="games/sm64/"><img src="images/sm64.png" alt="super mario 64"></a>
