--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         <a href="games/wordle/"><img src="images/wordleicon.png" alt="wordle"></a>
     </div>
     </div>
-    <h2>Up To Date</h2>
-    <h3>v2.0.0</h3>
+    <h2>Maintenance tomorrow at 8:20 AM (EST)</h2>
+    <h3>v2.0.3a</h3>
 </body>
 </html>
 
