--- a/index.html
+++ b/index.html
@@ -95,15 +95,20 @@
         <a href="games/worldshardestgame2/"><img src="images/worldshardestgame2.png" alt="worlds hardest game 2"></a>
         <a href="games/slope2/"><img src="images/slope21.png" alt="slope 2"></a>
         <a href="games/sm64/"><img src="images/sm64.png" alt="super mario 64"></a>
-        <a href="games/stickmanhook/"><img src="images/stickmanhook.png" alt="stickman hook"></a>
+        <a href="games/stickman-hook/"><img src="images/stickmanhook.png" alt="stickman hook"></a>
         <a href="games/minecraft-18/"><img src="images/minecraft.png" alt="minecraft"></a>
         <a href="games/drift-boss/"><img src="images/driftboss.png" alt="drift boss"></a>
         <a href="games/core-ball/"><img src="images/coreball.png" alt="core ball"></a>
         <a href="games/wordle/"><img src="images/wordleicon.png" alt="wordle"></a>
+        <a href="games/subway-surfers/"><img src="images/subwaysurfers.png" alt="subway surfers"></a>
+        <a href="games/bad-ice-cream/"><img src="images/badice1.png" alt="bad ice cream"></a>
+        <a href="games/bad-ice-cream-3/"><img src="images/badice3.png" alt="bad ice cream 3"></a>
+        <a href="games/cell-machine/"><img src="images/cellmachine.png" alt="cell machine"></a>
+        <a href="games/cookie-clicker/"><img src="images/cookie.png" alt="cookie clicker"></a>
     </div>
     </div>
     <h2>Up To Date</h2>
-    <h3>v2.0.3a</h3>
+    <h3>v2.0.3e</h3>
 </body>
 </html>
 
