Huge Game Addition!

--- a/index.html
+++ b/index.html
@@ -109,10 +109,15 @@
         <a href="games/paperio2/"><img src="images/paperio2.png" alt="paper io 2"></a>
         <a href="games/temple-run-2/"><img src="images/templerun2.png" alt="temple run 2"></a>
         <a href="games/tunnel-rush/"><img src="images/tunelrush.png" alt="tunnel rush"></a>
+        <a href="games/drift-hunters/"><img src="images/drifthunters.png" alt="drift hunters"></a>
+        <a href="games/ducklife1/"><img src="images/ducklife.png" alt="duck life"></a>
+        <a href="games/ducklife2/"><img src="images/ducklife2.png" alt="duck life 2"></a>
+        <a href="games/ducklife3/"><img src="images/ducklife3.png" alt="duck life 3"></a>
+        <a href="games/ducklife4/"><img src="images/ducklife4.png" alt="duck life 4"></a>
     </div>
     </div>
     <h2>Up To Date</h2>
-    <h3>v2.0.3e</h3>
+    <h3>v2.1.1a</h3>
 </body>
 </html>
 
