--- a/index.html
+++ b/index.html
@@ -113,10 +113,12 @@
         <a href="games/ducklife4/"><img src="images/ducklife4.png" alt="duck life 4"></a>
         <a href="games/doom/"><img src="images/doom.png" alt="doom"></a>
         <a href="games/fnaf2/"><img src="images/fnaf2.png" alt="five nights at freddys 2"></a>
+        <a href="games/madalin-stunt-cars-2/"><img src="images/madalin-stunt-cars-2.png" alt="madalin stunt cars 2"></a>
+        <a href="games/madalin-stunt-cars-3/"><img src="images/Madalin-Stunt-Cars-3.png" alt="madalin stunt cars 3"></a>
     </div>
     </div>
     <h2>Up To Date</h2>
-    <h3>v2.1.6e</h3>
+    <h3>v2.2.0a</h3>
 </body>
 </html>
 
