--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <script>
         function redirectToRandomSite() {
             const urls = [
-                "https://www.youtube.com",
-                "https://www.discord.com",
-                "https://www.unblockedv2.vercel.app",
-                "https://www.google.com"
+                "https://www.youtube.com/",
+                "https://www.discord.com/",
+                "https://www.unblockedv2.vercel.app/",
+                "https://www.google.com/"
             ];
             const randomIndex = Math.floor(Math.random() * urls.length);
             window.location.href = urls[randomIndex];
@@ -29,62 +29,61 @@
     <div class="featured">
         <h1>Popular:</h1>
         <div class="column">
-          <a href="games/bob-the-robber-2/">
-            <img src="images/bob-the-robber-2.png">
-            <div class="play-button">
-                <i class="fa-solid fa-play"></i>
-            </div>
-          </a>
-          <a href="games/vex7/">
-            <img src="images/vex7.jpeg">
-            <div class="play-button">
-                <i class="fa-solid fa-play"></i>
-            </div>
-          </a>
+            <a href="games/bob-the-robber-2/">
+                <img src="images/bob-the-robber-2.png" alt="Bob the Robber 2">
+                <div class="play-button">
+                    <i class="fa-solid fa-play"></i>
+                </div>
+            </a>
+            <a href="games/vex7/">
+                <img src="images/vex7.jpeg" alt="Vex 7">
+                <div class="play-button">
+                    <i class="fa-solid fa-play"></i>
+                </div>
+            </a>
         </div>
         <div class="row">
-          <a href="games/vex6">
-            <img src="images/vex6.jpeg">
-            <div class="play-button">
-                <i class="fa-solid fa-play"></i>
-            </div>
-          </a>
+            <a href="games/vex6/">
+                <img src="images/vex6.jpeg" alt="Vex 6">
+                <div class="play-button">
+                    <i class="fa-solid fa-play"></i>
+                </div>
+            </a>
         </div>
         <div class="row">
-          <a href="games/drive-mad/">
-            <img src="images/drive-mad.jpg">
-            <div class="play-button">
-                <i class="fa-solid fa-play"></i>
-            </div>
-          </a>
+            <a href="games/drive-mad/">
+                <img src="images/drive-mad.jpg" alt="Drive Mad">
+                <div class="play-button">
+                    <i class="fa-solid fa-play"></i>
+                </div>
+            </a>
         </div>
         <div class="column">
-          <a href="games/moto-x3m/">
-            <img src="images/moto-x3m.jpg">
-            <div class="play-button">
-                <i class="fa-solid fa-play"></i>
-            </div>
-          </a>
-          <a href="games/retro-bowl/">
-            <img src="images/retro-bowl.jpg">
-            <div class="play-button">
-                <i class="fa-solid fa-play"></i>
-            </div>
-          </a>
+            <a href="games/moto-x3m/">
+                <img src="images/moto-x3m.jpg" alt="Moto X3M">
+                <div class="play-button">
+                    <i class="fa-solid fa-play"></i>
+                </div>
+            </a>
+            <a href="games/retro-bowl/">
+                <img src="images/retro-bowl.jpg" alt="Retro Bowl">
+                <div class="play-button">
+                    <i class="fa-solid fa-play"></i>
+                </div>
+            </a>
         </div>
     </div>
 
     <div class="content">
+        <hr>
 
-    <hr>
+        <div class="search">
+            <input type="text" placeholder="Search..." oninput="">
+            <button><i class="fas fa-search"></i></button>
+        </div>
 
-    <div class="search">
-        <input type="text" placeholder="Search..." oninput="">
-        <button><i class="fas fa-search"></i></button>
-    </div>
-
-    <div id="games">
-        <a href="games/bob-the-robber-2/"><img src="images/bob-the-robber-2.png" alt="bob the robber 2"></a>
+        <div id="games">
+            <a href="games/bob-the-robber-2/"><img src="images/bob-the-robber-2.png" alt="bob the robber 2"></a>
         <a href="games/vex7/"><img src="images/vex7.jpeg" alt="vex 7"></a>
         <a href="games/vex6/"><img src="images/vex6.jpeg" alt="vex 6"></a>
         <a href="games/moto-x3m/"><img src="images/moto-x3m.jpg" alt="moto x3m"></a>
@@ -132,10 +131,13 @@
         <a href="games/10-minutes-till-dawn/"><img src="images/10minstilldawn.png" alt="10 minutes till dawn"></a>
         <a href="games/jetpack-joyride/"><img src="images/jetpackjoy.png" alt="jetpack joyride"></a>
         <a href="games/fridaynightfunkin/"><img src="images/fnf.png" alt="friday night funkin"></a>
+        </div>
     </div>
-    </div>
-    <h2>Up To Date</h2>
-    <h3>v2024.8</h3>
+
+    <button onclick="window.location.href='access.html'" style="margin-top: 20px;">Access - Beta</button>
+
+    <h2 style="color: white;">Up To Date</h2>
+    <h3 style="color: white;">v2024.9</h3>
 
     <script src="script.js"></script>
 </body>
