--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
     </div>
 
-    <button onclick="window.location.href='access.html'" style="margin-top: 20px;">Access - Beta</button>
+    <button onclick="window.location.href='access-beta.html'" style="margin-top: 20px;">Access - Beta</button>
 
     <h2 style="color: white;">Up To Date</h2>
     <h3 style="color: white;">v2024.9</h3>
