--- a/access-beta.html
+++ b/access-beta.html
@@ -6,15 +6,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Access - Beta</title>
     <link rel="stylesheet" href="/main.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background-color: #2c3e50;
+            color: white;
+        }
+
+        nav {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            padding: 10px;
+            background-color: #34495e;
+        }
+
+        button {
+            background-color: #2980b9;
+            color: white;
+            border: none;
+            padding: 10px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background-color: #3498db;
+        }
+
+        .access-content {
+            margin-top: 20px;
+        }
+
+        #url-input {
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            outline: none;
+            transition: width 0.3s;
+            width: 150px; /* Default width /
+            background-color: #ecf0f1;
+            color: #2c3e50;
+        }
+
+        #url-input:focus {
+            width: 250px; / Expanded width */
+        }
+
+        #url-input::placeholder {
+            color: #7f8c8d;
+        }
+    </style>
 </head>
 <body>
     <nav>
         <h1>Access - Beta</h1>
-        <button onclick="window.history.back()">Back</button>
+        <button onclick="window.history.back()" style="border-radius: 5px;">Back</button>
     </nav>
 
     <div class="access-content">
-        <input type="text" id="url-input" placeholder="Enter a URL...">
+        <input type="text" id="url-input" placeholder="Search" onfocus="this.placeholder=''" onblur="this.placeholder='Search'">
         <button onclick="accessWebsite()">Go</button>
     </div>
 
@@ -22,7 +79,7 @@
         function accessWebsite() {
             const url = document.getElementById('url-input').value;
             if (url) {
-                window.location.href = url;
+                window.location.href = url.startsWith('http') ? url : 'http://' + url; // Ensure URL starts with http
             } else {
                 alert('Please enter a valid URL.');
             }
