--- a/access-beta.html
+++ b/access-beta.html
@@ -16,6 +16,7 @@
             height: 100vh;
             background-color: #2c3e50;
             color: white;
+            margin: 0;
         }
 
         nav {
@@ -42,21 +43,23 @@
 
         .access-content {
             margin-top: 20px;
+            text-align: center;
         }
 
         #url-input {
             padding: 10px;
             border: none;
-            border-radius: 5px;
+            border-radius: 25px; /* Make the input round /
             outline: none;
             transition: width 0.3s;
-            width: 150px; /* Default width /
+            width: 200px; / Default width /
             background-color: #ecf0f1;
             color: #2c3e50;
+            font-size: 16px;
         }
 
         #url-input:focus {
-            width: 250px; / Expanded width */
+            width: 300px; / Expanded width */
         }
 
         #url-input::placeholder {
@@ -67,19 +70,22 @@
 <body>
     <nav>
         <h1>Access - Beta</h1>
-        <button onclick="window.history.back()" style="border-radius: 5px;">Back</button>
+        <button onclick="window.history.back()">Back</button>
     </nav>
 
     <div class="access-content">
-        <input type="text" id="url-input" placeholder="Search" onfocus="this.placeholder=''" onblur="this.placeholder='Search'">
+        <input type="text" id="url-input" placeholder="example.com" onfocus="this.placeholder=''" onblur="this.placeholder='example.com'">
         <button onclick="accessWebsite()">Go</button>
     </div>
 
     <script>
         function accessWebsite() {
-            const url = document.getElementById('url-input').value;
+            const url = document.getElementById('url-input').value.trim();
             if (url) {
-                window.location.href = url.startsWith('http') ? url : 'http://' + url; // Ensure URL starts with http
+                const formattedUrl = url.startsWith('http://'/) || url.startsWith('https://'/) 
+                    ? url 
+                    : 'http://' + url; // Default to http if no protocol
+                window.location.href = formattedUrl.includes('.') ? formattedUrl : 'http://' + formattedUrl; // Ensure URL includes a dot
             } else {
                 alert('Please enter a valid URL.');
             }
