--- a/access-beta.html
+++ b/access-beta.html
@@ -59,11 +59,63 @@
         }
 
         #url-input:focus {
-            width: 300px; / Expanded width */
+            width: 300px; / Expanded width /
         }
 
         #url-input::placeholder {
             color: #7f8c8d;
+        }
+
+        .checkbox-container {
+            display: flex;
+            align-items: center;
+            margin-top: 10px;
+        }
+
+        .custom-checkbox {
+            display: none;  Hide default checkbox 
+        }
+
+        .checkbox-label {
+            position: relative;
+            cursor: pointer;
+            padding-left: 30px;
+            font-size: 16px;
+            color: white;
+        }
+.checkbox-label:before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 20px;
+            height: 20px;
+            border: 2px solid #2980b9;
+            border-radius: 4px;
+            background: transparent;
+            transition: background-color 0.3s, border-color 0.3s;
+        }
+
+        .custom-checkbox:checked + .checkbox-label:before {
+            background: #2980b9;
+            border-color: #2980b9;
+        }
+
+        .iframe-container {
+            margin-top: 20px;
+            display: none; / Initially hidden /
+            width: 80%;
+            height: 500px; / Set height for iframe /
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+        }
+
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
         }
     </style>
 </head>
@@ -76,18 +128,46 @@
     <div class="access-content">
         <input type="text" id="url-input" placeholder="example.com" onfocus="this.placeholder=''" onblur="this.placeholder='example.com'">
         <button onclick="accessWebsite()">Go</button>
+
+        <div class="checkbox-container">
+            <input type="checkbox" id="vrt-checkbox" class="custom-checkbox" onclick="toggleIframe()">
+            <label for="vrt-checkbox" class="checkbox-label">VRT-x</label>
+        </div>
+
+        <div class="iframe-container" id="iframe-container">
+            <iframe id="iframe" src="" title="Website Viewer"></iframe>
+        </div>
     </div>
 
     <script>
         function accessWebsite() {
             const url = document.getElementById('url-input').value.trim();
             if (url) {
-                const formattedUrl = url.startsWith('http://'/) || url.startsWith('https://'/) 
+                const formattedUrl = url.startsWith('http://'/)  url.startsWith('https://'/) 
                     ? url 
                     : 'http://' + url; // Default to http if no protocol
                 window.location.href = formattedUrl.includes('.') ? formattedUrl : 'http://' + formattedUrl; // Ensure URL includes a dot
             } else {
                 alert('Please enter a valid URL.');
+            }
+        }
+
+        function toggleIframe() {
+            const iframeContainer = document.getElementById('iframe-container');
+            const checkbox = document.getElementById('vrt-checkbox');
+            const urlInput = document.getElementById('url-input').value.trim();
+
+            if (checkbox.checked && urlInput) {
+                const formattedUrl = urlInput.startsWith('http://'/)  urlInput.startsWith('https://'/)
+                    ? urlInput
+                    : 'http://' + urlInput; // Default to http if no protocol
+                document.getElementById('iframe').src = formattedUrl; // Set iframe src
+                iframeContainer.style.display =
+
+'block'; // Show iframe
+            } else {
+                iframeContainer.style.display = 'none'; // Hide iframe if not checked or no URL
+                document.getElementById('iframe').src = ''; // Clear iframe src
             }
         }
     </script>
