--- a/access-beta.html
+++ b/access-beta.html
@@ -18,7 +18,7 @@
             color: white;
             margin: 0;
         }
-
+ 
         nav {
             display: flex;
             justify-content: space-between;
@@ -26,7 +26,7 @@
             padding: 10px;
             background-color: #34495e;
         }
-
+ 
         button {
             background-color: #2980b9;
             color: white;
@@ -36,16 +36,16 @@
             cursor: pointer;
             transition: background-color 0.3s;
         }
-
+ 
         button:hover {
             background-color: #3498db;
         }
-
+ 
         .access-content {
             margin-top: 20px;
             text-align: center;
         }
-
+ 
         #url-input {
             padding: 10px;
             border: none;
@@ -57,25 +57,25 @@
             color: #2c3e50;
             font-size: 16px;
         }
-
+ 
         #url-input:focus {
             width: 300px;
         }
-
+ 
         #url-input::placeholder {
             color: #7f8c8d;
         }
-
+ 
         .checkbox-container {
             display: flex;
             align-items: center;
             margin-top: 10px;
         }
-
+ 
         .custom-checkbox {
             display: none;
         }
-
+ 
         .checkbox-label {
             position: relative;
             cursor: pointer;
@@ -83,7 +83,7 @@
             font-size: 16px;
             color: white;
         }
-
+ 
         .checkbox-label:before {
             content: '';
             position: absolute;
@@ -97,12 +97,12 @@
             background: transparent;
             transition: background-color 0.3s, border-color 0.3s;
         }
-
+ 
         .custom-checkbox:checked + .checkbox-label:before {
             background: #2980b9;
             border-color: #2980b9;
         }
-
+ 
         .iframe-container {
             margin-top: 20px;
             display: none;
@@ -112,12 +112,12 @@
             overflow: hidden;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
         }
-
+ 
         iframe {
             width: 100%;
             height: 100%;
             border: none;
-}
+        }
     </style>
 </head>
 <body>
@@ -125,41 +125,53 @@
         <h1>Access - Beta</h1>
         <button onclick="window.history.back()">Back</button>
     </nav>
-
+ 
     <div class="access-content">
         <input type="text" id="url-input" placeholder="example.com" onfocus="this.placeholder=''" onblur="this.placeholder='example.com'">
         <button onclick="accessWebsite()">Go</button>
-
+ 
         <div class="checkbox-container">
             <input type="checkbox" id="vrt-checkbox" class="custom-checkbox" onclick="toggleIframe()">
             <label for="vrt-checkbox" class="checkbox-label">VRT-x</label>
         </div>
-
+ 
         <div class="iframe-container" id="iframe-container">
             <iframe id="iframe" src="" title="Website Viewer"></iframe>
         </div>
     </div>
-
+ 
     <script>
         function accessWebsite() {
             const url = document.getElementById('url-input').value.trim();
             if (url) {
-                const formattedUrl = url.startsWith('http://'/)  url.startsWith('https://'/) 
+                const formattedUrl = (url.startsWith('http://') || url.startsWith('https://')) 
                     ? url 
                     : 'http://' + url;
-                window.location.href = formattedUrl.includes('.') ? formattedUrl : 'http://' + formattedUrl;
+ 
+                const isValidUrl = formattedUrl.includes('.') && formattedUrl.split('.').length >= 2;
+ 
+                if (isValidUrl) {
+                    if (!document.getElementById('vrt-checkbox').checked) {
+                        window.open(formattedUrl, '_blank');
+                    } else {
+                        document.getElementById('iframe').src = formattedUrl;
+                        document.getElementById('iframe-container').style.display = 'block';
+                    }
+                } else {
+                    alert('Please enter a valid URL (e.g., example.com)');
+                }
             } else {
                 alert('Please enter a valid URL.');
             }
         }
-
+ 
         function toggleIframe() {
             const iframeContainer = document.getElementById('iframe-container');
             const checkbox = document.getElementById('vrt-checkbox');
             const urlInput = document.getElementById('url-input').value.trim();
-
+ 
             if (checkbox.checked && urlInput) {
-                const formattedUrl = urlInput.startsWith('http://'/)  urlInput.startsWith('https://'/)
+                const formattedUrl = (urlInput.startsWith('http://') || urlInput.startsWith('https://'))
                     ? urlInput
                     : 'http://' + urlInput;
                 document.getElementById('iframe').src = formattedUrl;
