--- a/access-beta.html
+++ b/access-beta.html
@@ -2,339 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Access - Beta</title>
-    <link rel="stylesheet" href="/main.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            background-color: #2c3e50;
-            color: white;
-            margin: 0;
-        }
- 
-        nav {
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
-            padding: 10px;
-            background-color: #34495e;
-        }
- 
-        button {
-            background-color: #2980b9;
-            color: white;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
- 
-        button:hover {
-            background-color: #3498db;
-        }
- 
-        .access-content {
-            margin-top: 20px;
-            text-align: center;
-        }
- 
-        #url-input {
-            padding: 10px;
-            border: none;
-            border-radius: 25px;
-            outline: none;
-            transition: width 0.3s;
-            width: 200px;
-            background-color: #ecf0f1;
-            color: #2c3e50;
-            font-size: 16px;
-        }
- 
-        #url-input:focus {
-            width: 300px;
-        }
- 
-        #url-input::placeholder {
-            color: #7f8c8d;
-        }
- 
-        .checkbox-container {
-            display: flex;
-            align-items: center;
-            margin-top: 10px;
-        }
- 
-        .custom-checkbox {
-            display: none;
-        }
- 
-        .checkbox-label {
-            position: relative;
-            cursor: pointer;
-            padding-left: 30px;
-            font-size: 16px;
-            color: white;
-        }
- 
-        .checkbox-label:before {
-            content: '';
-            position: absolute;
-            left: 0;
-            top: 50%;
-            transform: translateY(-50%);
-            width: 20px;
-            height: 20px;
-            border: 2px solid #2980b9;
-            border-radius: 4px;
-            background: transparent;
-            transition: background-color 0.3s, border-color 0.3s;
-        }
- 
-        .custom-checkbox:checked + .checkbox-label:before {
-            background: #2980b9;
-            border-color: #2980b9;
-        }
- 
-        .iframe-container {
-            margin-top: 20px;
-            display: none;
-            width: 80%;
-            height: 500px;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
-        }
- 
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
- 
-        #beta-code-container, #nested-vtx-container {
-            margin-top: 10px;
-            display: none;
-        }
- 
-        .beta-code-input {
-            padding: 8px;
-            border: none;
-            border-radius: 4px;
-            outline: none;
-            font-size: 16px;
-        }
- 
-        #nested-vtx-checkbox-container {
-            margin-top: 10px;
-            display: none;
-        }
- 
-        .dropdown-container {
-            margin-top: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
- 
-        select {
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            background-color: #34495e;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
-            outline: none;
-        }
- 
-        .bottom-info {
-            margin-top: 20px;
-            color: #bdc3c7;
-            font-size: 14px;
-        }
-
-        .youtube-button-container {
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
-            margin-botton: 50px;
-        }
-
-        .youtube-button {
-            background-color: #FF0000;
-            color: white;
-            padding: 15px 30px;
-            text-decoration: none;
-            border-radius: 50px;
-            font-size: 18px;
-            font-weight: bold;
-            text-align: center;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: all 0.3s ease-in-out;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .youtube-button::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(255, 255, 255, 0.2);
-            opacity: 0;
-            transition: all 0.4s ease-in-out;
-        }
-
-        .youtube-button:hover {
-            background-color: #cc0000;
-            box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
-            transform: translateY(-3px);
-        }
-
-        .youtube-button:hover::before {
-            opacity: 1;
-        }
-
-        .youtube-button:active {
-            transform: translateY(1px);
-        }
-    </style>
+    <title>Access Beta</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
-        <h1>Access - Beta</h1>
-        <button onclick="window.history.back()">Back</button>
+    <!-- Topbar with buttons -->
+    <nav class="topbar">
+        <div class="left">
+            <a href="index.html" class="topbar-button">Home</a>
+            <a href="https://youtu.be/P1jJywOXV5Y?si=0N5SyK70V_2c0UrO" class="topbar-button" target="_blank">YouTube</a>
+            <span class="topbar-button disabled">Beta</span>
+        </div>
+        <div class="right">
+            <span class="topbar-title">Access Beta</span>
+        </div>
     </nav>
- 
-    <div class="access-content">
-        <input type="text" id="url-input" placeholder="example.com" onfocus="this.placeholder=''" onblur="this.placeholder='example.com'">
-        <button onclick="accessWebsite()">Go</button>
- 
-        <div class="checkbox-container">
-            <input type="checkbox" id="vrt-checkbox" class="custom-checkbox" onclick="toggleIframe()">
-            <label for="vrt-checkbox" class="checkbox-label">Virtual Access (VRT-x)</label>
-        </div>
- 
-        <div id="beta-code-container">
-            <input type="text" id="beta-code" class="beta-code-input" placeholder="Beta Code">
-            <button onclick="checkBetaCode()">Enter</button>
-        </div>
- 
-        <div id="nested-vtx-checkbox-container" class="checkbox-container">
-            <input type="checkbox" id="nested-vtx-checkbox" class="custom-checkbox" onclick="toggleNestedVTx()">
-            <label for="nested-vtx-checkbox" class="checkbox-label">Nested-VTx</label>
-        </div>
- 
-        <div class="iframe-container" id="iframe-container">
-            <iframe id="iframe" src="" title="Website Viewer"></iframe>
-            <div class="bottom-info">
-                <span id="version">V1.8.2</span> | <span id="memory-usage"></span>
-            </div>
-        </div>
- 
-        <div class="dropdown-container">
-            <label for="resolution">Resolution:</label>
-            <select id="resolution" onchange="changeResolution()">
-                <option value="4096x2160">4096x2160</option>
-                <option value="2560x1440">2560x1440</option>
-                <option value="1920x1080" selected>1920x1080</option>
-                <option value="1280x720">1280x720</option>
-            </select>
-        </div>
+
+    <!-- Search Bar and Submit Button -->
+    <div class="search-container">
+        <form id="search-form" onsubmit="accessWebsite(event)">
+            <input type="text" id="search-input" class="search-bar" placeholder="Enter URL or search" />
+            <button type="submit" class="search-button">Go</button>
+        </form>
     </div>
- 
+
+    <div class="content">
+        <!-- Placeholder for additional content -->
+    </div>
+
+    <!-- JavaScript for handling the search functionality -->
     <script>
-        function accessWebsite() {
-            const url = document.getElementById('url-input').value.trim();
+        function accessWebsite(event) {
+            event.preventDefault();
+            const url = document.getElementById('search-input').value;
             if (url) {
-                const formattedUrl = (url.startsWith('http://') || url.startsWith('https://')) 
-                    ? url 
-                    : 'http://' + url;
- 
-                const isValidUrl = formattedUrl.includes('.') && formattedUrl.split('.').length >= 2;
- 
-                if (isValidUrl) {
-                    if (!document.getElementById('vrt-checkbox').checked) {
-                        window.open(formattedUrl, '_blank');
-                    } else {
-                        document.getElementById('iframe').src = formattedUrl;
-                        document.getElementById('iframe-container').style.display = 'block';
-                    }
-                } else {
-                    alert('Please enter a valid URL (e.g., example.com)');
-                }
-            } else {
-                alert('Please enter a valid URL.');
+                const validUrl = url.startsWith('http') ? url : https://${url};
+                window.open(validUrl, '_blank');
             }
-        }
- 
-        function toggleIframe() {
-            const iframeContainer = document.getElementById('iframe-container');
-            const checkbox = document.getElementById('vrt-checkbox');
-            const urlInput = document.getElementById('url-input').value.trim();
- 
-            if (checkbox.checked && urlInput) {
-                document.getElementById('beta-code-container').style.display = 'block';
-            } else {
-                iframeContainer.style.display = 'none';
-                document.getElementById('iframe').src = '';
-                document.getElementById('beta-code-container').style.display = 'none';
-                document.getElementById('nested-vtx-checkbox-container').style.display = 'none';
-            }
-        }
- 
-        function checkBetaCode() {
-            const betaCode = document.getElementById('beta-code').value.trim();
-            if (betaCode === "19aQprT") {
-                document.getElementById('nested-vtx-checkbox-container').style.display = 'block';
-            } else {
-                alert('Invalid Beta Code');
-            }
-        }
- 
-        function toggleNestedVTx() {
-            const nestedCheckbox = document.getElementById('nested-vtx-checkbox');
-            const iframeContainer = document.getElementById('iframe-container');
-            if (nestedCheckbox.checked) {
-                iframeContainer.style.width = '100vw';
-                iframeContainer.style.height = '100vh';
-            } else {
-                iframeContainer.style.width = '80%';
-                iframeContainer.style.height = '500px';
-            }
-        }
- 
-        function changeResolution() {
-            const resolution = document.getElementById('resolution').value;
-            const iframe = document.getElementById('iframe');
-            iframe.style.width = resolution.split('x')[0] + 'px';
-            iframe.style.height = resolution.split('x')[1] + 'px';
-        }
- 
-        window.onload = function() {
-            // Display a random 12-letter generated code
-            const randomCode = Math.random().toString(36).substring(2, 14).toUpperCase();
-            const bottomInfo = document.querySelector('.bottom-info');
-            bottomInfo.innerHTML = `${bottomInfo.innerHTML} | Beta Code: ${randomCode}`;
- 
-            // Simulate memory usage (replace with actual values if needed)
-            document.getElementById('memory-usage').innerText = 'Google Memory: 200MB';
         }
     </script>
-    <div> class="youtube-button-container">
-        <a href="https://youtu.be/P1jJywOXV5Y?si=0N5SyK70V_2c0UrO" class="youtube-button" target="_blank">
-            Click Here For YouTube
-        </a>
-    </div>
 </body>
 </html>
