--- a/access-beta.html
+++ b/access-beta.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Access Beta</title>
-    <link rel="icon" href="Google.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
@@ -22,6 +21,7 @@
             background-color: #0056b3;
             padding: 10px;
             border-radius: 8px;
+            color: white;
         }
         .button {
             background-color: #007bff;
@@ -75,7 +75,6 @@
     <p style="text-align: center; margin-top: 20px;">v2024.9</p>
 
     <script>
-        // Function to access the website and display in iframe
         function accessWebsite() {
             let url = document.getElementById('search-bar').value;
             if (!url.startsWith('http://') && !url.startsWith('https://')) {
