Removed Settings and Added 'Refresh Site'

--- a/access-beta.html
+++ b/access-beta.html
@@ -65,7 +65,7 @@
         <div>
             <a href="index.html" class="button">Home</a>
             <a href="https://youtu.be/P1jJywOXV5Y?si=0N5SyK70V_2c0UrO" class="button">YouTube</a>
-            <button class="button" onclick="window.location.href='local.php'">Settings</button>
+            <button class="button" onclick="window.location.href='access-beta.html'">Refresh Site</button>
             <button class="button" disabled>Beta</button>
         </div>
     </div>
