--- a/api-v2.html
+++ b/api-v2.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Api V2</title>
+  <h>Source code is unavailable.</h>
+  <h3>Developers of this site can only see the Api Source Code.</h3>
+  <h6>Updated v2024.9f</h6>
+</head>
